<resources>
    <string name="app_name">Biblioteca Cientec</string>
    <string name="button_login">Entrar</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Senha</string>
    <string name="button_cancel">Cancelar</string>
    <string name="logo_cientec">Logo Cientec</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
